# datadoorway

./: .coveragerc  .gitignore  CONTRIBUTING.md  README.md  cmds.sh  docker-compose.yaml  locustfile.py  main.py  prod.env  pyproject.toml  test.env
API/dependencies/: global_dependencies.py  publisher_dependencies.py  router_dependencies.py  schema_dependencies.py
API/metadata/: app.py  app_metadata.py  doc_strings.py  paths.py  paths_metadata.py  publishers.py  publishers_metadata.py  response_metadata.py  tags.py  tags_metadata.py
API/routers/: admin.py  admin_router.py  publish.py  publish_router.py  root.py  root_router.py  schema.py  schema_router.py
API/v1/: auth.py  echo.py
core/connectors/publishers/: bigquery_publisher.py  console_publisher.py  file_publisher.py  file_publisher_1.py  firehose_publisher.py  gcs_publisher.py  kafka_publisher.py  opensearch_publisher.py  publisher.py  publisher_interface.py  s3_publisher.py
core/connectors/services/aws/: aws_wrangler.py
core/middleware/: custom_middleware.py
core/models/: jwt_model.py  model.py  payload_metadata_model.py  payload_model.py  publisher_response_model.py  schema_test_model.py  setting_model.py
core/security/: jwt_authorization.py  jwt_bearer_authorization.py  jwt_security.py
core/settings/: metrics_settings.py  publisher_settings.py  router_settings.py  schema_settings.py  security_settings.py  settings.py
core/utilities/: basics.py
core/validations/: admin_validations.py  jwt_bearer_validations.py  jwt_validations.py  publisher_validations.py  schema_validations.py  validations.py
schemas/users/mobile/: android.json  ios.json
tests/: constants.py  test_admin_endpoint.py  test_basic_utilities.py  test_jwt_bearer_authorization.py  test_publish_endpoint.py  test_schema_endpoint.py
tests/core/security/: test_jwt_bearer_authorization.py
tests/core/settings/: test_security_settings.py
tests/core/validations/: test_jwt_bearer_validations.py
tests/schemas/sales/orders/: v1.json
tests/schemas/users/mobile/: android.json  ios.json
