[tool.poetry]
name = "datadoorway"
version = "0.1.0"
description = "DataDoorway is your doorway to send / receive data from various data sources"
authors = ["ravi <rab4u@engineer.com>"]
license = "Apache-2.0"
packages = [{include = "datadoorway"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
enum34 = "^1.1.10"
PyJWT = "^2.5.0"
requests = "^2.28.1"
jsonschema = {extras = ["format"], version = "^4.16.0"}
watchfiles = "^0.18.0"
aiokafka = "^0.8.0"
cachetools = "^5.2.0"
fastjsonschema = "^2.16.2"

[tool.poetry.group.test.dependencies]
coverage = "^6.5.0"
pytest = "^7.1.3"
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

